--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -3,7 +3,6 @@
 %Section
 \section{Quantum Indistinguishability Obfuscation}
 \label{sec:QiO-Cliffords and more}
-<<<<<<< HEAD
 In this section we provide definitions of equivalent quantum circuits and  Quantum Indistinguishability Obfuscation $Qi\mathcal{O}.$ In section \ref{QiO:Clifford-Circuits} we show how to construct $Qi\mathcal{O}$ for Clifford circuits. The first construction is based on a canonical form, and the second is based on the principle of gate teleportation.
 
 
@@ -192,17 +191,18 @@ Let $C_{q_1}$ and $C_{q_2}$ be two equivalent $n$-qubit Clifford circuits and  $
 \label{fun:assumption1}
 F_{C_{q_1}}(a_1,b_1,\ldots,a_n,b_n)\neq F_{C_{q_2}}(a_1,b_1,\ldots,a_n,b_n)
 \end{equation}
-Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_1}},$ then it follows from the assumption \ref{fun:assumption1} that
-\begin{equation*}
+Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_2}}$ respectively, then it follows from the assumption \ref{fun:assumption1} that
+\begin{equation}
+\label{fun:assumption2}
 C_1(a_1,b_1,\ldots,a_n,b_n)\neq C_2(a_1,b_1,\ldots,a_n,b_n)
-\end{equation*}
+\end{equation}
 
 
 %\begin{equation*}
 %\left(\rho ,\left(B_q, i\mathcal{O}(C_1})\right)\right)= Qi\mathcal{O}(C_2}) \mbox{ and } \left(\rho ,\left(B_q, i\mathcal{O}(C_{F_{C_{q_2}}})\right)\right)= Qi\mathcal{O}(C_{q_2}).
 %\end{equation*}
 
-Suppose we want to evaluate circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using construction based on gate teleportaton (section \ref{sec:Clifford-iO-teleportaion}). Then in the step 3 of the 
+Suppose we evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using construction based on gate teleportaton (section \ref{sec:Clifford-iO-teleportaion}). Then in the step 3 of the 
  algorithm 4 (section \ref{Eval:Clifford-teleportation}) we are left with subsystems %$\rho_{AB}=\rho\otimes \ket \psi$ (see algorithm 3). Therefore, the classical output bits we obtain after performing the Bell measurement in algorithm 3 are independent of the circuits $C_{q_1}$ and $C_{q_2}$). Suppose for both circuits we obtain the same classical outputs $a_1b_1,\ldots, a_nb_n.$ From algorithm 3 we have
 
  \begin{equation}
@@ -210,18 +210,15 @@ Suppose we want to evaluate circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket
 C_{q_1} (\xgate^{\otimes_{i=1}^{n} b_{i}^\prime} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}^\prime})\ket{\psi} \;\mbox{ and }\;
 C_{q_2} (\xgate^{\otimes_{i=1}^{n} \beta_{i}^\prime} \cdot \zgate^{\otimes_{i=1}^{n}\alpha_{i}^\prime})\ket{\psi}
 \end{equation}
-where $a_1^\prime b_1^\prime,\ldots, a_n^\prime b_n^\prime$ and $\alpha_1^\prime \beta_1^\prime,\ldots, \alpha_n^\prime \beta_n^\prime$ are random bits obtained after Bell measurement (algorithm 4, step 2, section \ref{sec:Clifford-iO-teleportaion}).
-
-Set $s=a_1b_1,\ldots, a_nb_n$ and recall that $F_{C_{q_1}}(s)\neq F_{C_{q_2}}(s)$ (relation \ref{fun:assumption1}) and suppose $a_i^\prime=\alpha_i=a_i$ and $b_i^\prime=\beta_i^\prime=b_i,$ for all  $i\in[n]$ and 
-
+where $a_1^\prime b_1^\prime,\ldots, a_n^\prime b_n^\prime$ and $\alpha_1^\prime \beta_1^\prime,\ldots, \alpha_n^\prime \beta_n^\prime$ are random bits obtained after Bell measurement (algorithm 4, step 2, section \ref{sec:Clifford-iO-teleportaion}).   And further assume that the classical output of the Bell measurement for both circuits is the string  $s=a_1,b_1,\ldots,a_n,b_n,$ i.e  $s=a_1b_1,\ldots, a_nb_n$ and recall that $C_1(s)\neq C_2(s)$ (relation \ref{fun:assumption2}). Let 
  \begin{equation}
  \label{eq:3}
-F_{C_{q_1}}(s)=(a^\prime_1,b^\prime_1,\ldots, a^\prime_n,b^\prime_n) \mbox{ and } F_{C_{q_2}}(s)=(d_1^\prime,e_1^\prime,\ldots, d_n^\prime,e^\prime_n)
+C_1(s)=(a^\prime_1,b^\prime_1,\ldots, a^\prime_n,b^\prime_n)\neq(d_1^\prime,e_1^\prime,\ldots, d_n^\prime,e^\prime_n)=C_2(s)
 \end{equation}
 
 
 
-$C_{q_1}$ and $C_{q_2}$ are equivalent circuits. The relationships in equation \ref{eq:2} are also equivalent, i.e.
+Since, $C_{q_1}$ and $C_{q_2}$ are equivalent circuits. The relationships in equation \ref{eq:2} are also equivalent, i.e.
  \begin{equation}
   \label{eq:4}
 C_{q_1} (\xgate^{\otimes_{i=1}^{n} b_{i}} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}})\ket{\psi}=C_{q_2} (\xgate^{\otimes_{i=1}^{n} b_{i}} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}})\ket{\psi}
@@ -246,7 +243,7 @@ It follows from equation \ref{eq:6} that
 (\zgate^{\otimes_{i=1}^{n} a_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} b_{i}^\prime})=(\zgate^{\otimes_{i=1}^{n} d_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} e_{i}^\prime})
 \end{equation}
 
-It follows from equation \ref{eq:7}  that $$\zgate^{a_i^\prime} \cdot \xgate^{b_i^\prime}=\zgate^{d_i^\prime} \cdot \xgate^{e_i^\prime} \mbox{ for all } i\in[n].$$ Which is only possible if $a_i^\prime=d_i^\prime$ and  $b_i^\prime=e_i^\prime$ and therefore, if $C_{q_1}$ and $C_{q_2},$ are two equivalent circuits, then $F_{C_{q_1}}=F_{C_{q_2}}.$
+It follows from equation \ref{eq:7}  that $$\zgate^{a_i^\prime} \cdot \xgate^{b_i^\prime}=\zgate^{d_i^\prime} \cdot \xgate^{e_i^\prime} \mbox{ for all } i\in[n].$$ Which is only possible if $a_i^\prime=d_i^\prime$ and  $b_i^\prime=e_i^\prime$ and we have a contradiction, therefore, if $C_{q_1}$ and $C_{q_2},$ are two equivalent circuits, then $F_{C_{q_1}}=F_{C_{q_2}}.$
 \end{flushleft}
 
 
